resolved all linting issues
